--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,8 @@
         android:id="@+id/characterRecyclerview"
         android:layout_margin="5dp"
         android:layout_width="match_parent"
-        android:layout_height="420dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:scrollbars="vertical">
     </androidx.recyclerview.widget.RecyclerView>
 
