--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="200dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
@@ -11,11 +11,11 @@
         android:id="@+id/cv"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_margin="5dp"
+
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="20dp"
-        app:cardElevation="10dp"
-        app:cardMaxElevation="12dp"
+        app:cardElevation="5dp"
+        app:cardMaxElevation="5dp"
         app:cardPreventCornerOverlap="true"
         app:cardUseCompatPadding="true">
 
@@ -25,8 +25,8 @@
 
             <ImageView
                 android:id="@+id/characterImage"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:layout_margin="20dp"
                 android:src="@drawable/ic_launcher_background"
                 android:layout_alignParentStart="true"
@@ -37,12 +37,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Character Name"
-                android:textSize="25sp"
+                android:textSize="22sp"
                 android:textAlignment="center"
                 android:layout_margin="5dp"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/characterImage"/>
 
+            <ImageView
+                android:id="@+id/characterGenderImage"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                tools:srcCompat="@tools:sample/avatars" />
 
         </RelativeLayout>
 
