--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Character Name"
-                android:textSize="22sp"
+                android:textSize="20sp"
                 android:textAlignment="center"
                 android:layout_margin="5dp"
                 android:layout_centerVertical="true"
@@ -47,6 +47,7 @@
                 android:id="@+id/characterGenderImage"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:layout_margin="5dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
                 tools:srcCompat="@tools:sample/avatars" />
