--- a/app/src/main/res/layout/activity_character_details.xml
+++ b/app/src/main/res/layout/activity_character_details.xml
@@ -12,15 +12,40 @@
         tools:context=".CharacterDetailsActivity"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/backButton"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/bb"
+                android:layout_margin="5dp">
+            </ImageView>
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_margin="5dp"
+                android:textAlignment="textStart"
+                android:text="Alive"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:fontFamily="@font/avenir_font">
+            </TextView>
+        </LinearLayout>
 
         <ImageView
+            android:id="@+id/image"
             android:layout_width="275dp"
             android:layout_height="275dp"
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:src="@drawable/rick_morty_rick_and_morty_stunned_qasem_roqaya">
+            android:src="@mipmap/ic_launcher_round">
         </ImageView>
 
         <LinearLayout
@@ -29,7 +54,8 @@
             android:orientation="horizontal"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="20dp">
 
             <TextView
                 android:layout_width="130dp"
@@ -40,6 +66,7 @@
                 android:fontFamily="@font/avenir_font">
             </TextView>
             <TextView
+                android:id="@+id/status"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Alive"
@@ -54,7 +81,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="5dp">
 
             <TextView
                 android:layout_width="130dp"
@@ -65,6 +92,7 @@
                 android:fontFamily="@font/avenir_font">
             </TextView>
             <TextView
+                android:id="@+id/specy"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Human"
@@ -79,7 +107,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="5dp">
 
             <TextView
                 android:layout_width="130dp"
@@ -90,6 +118,7 @@
                 android:fontFamily="@font/avenir_font">
             </TextView>
             <TextView
+                android:id="@+id/gender"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Female"
@@ -104,7 +133,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="5dp">
 
             <TextView
                 android:layout_width="130dp"
@@ -115,6 +144,7 @@
                 android:fontFamily="@font/avenir_font">
             </TextView>
             <TextView
+                android:id="@+id/origin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Earth (C-137)"
@@ -129,7 +159,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="5dp">
 
             <TextView
                 android:layout_width="130dp"
@@ -140,6 +170,7 @@
                 android:fontFamily="@font/avenir_font">
             </TextView>
             <TextView
+                android:id="@+id/location"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Earth (C-137)"
@@ -154,7 +185,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="5dp">
 
             <TextView
                 android:layout_width="130dp"
@@ -165,6 +196,7 @@
                 android:fontFamily="@font/avenir_font">
             </TextView>
             <TextView
+                android:id="@+id/episodes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="1,2,3,4,5,6,22,51"
@@ -190,6 +222,7 @@
                 android:fontFamily="@font/avenir_font">
             </TextView>
             <TextView
+                android:id="@+id/created"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="5 May 2017, 09:48:44"
