--- a/app/src/main/res/layout/item_location.xml
+++ b/app/src/main/res/layout/item_location.xml
@@ -8,7 +8,7 @@
     <Button
         android:id="@+id/locationButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:text="earth"
         android:backgroundTint="#000000"
         android:layout_margin="5dp"
