--- a/app/src/main/res/layout/activity_character_details.xml
+++ b/app/src/main/res/layout/activity_character_details.xml
@@ -41,6 +41,7 @@
             android:id="@+id/image"
             android:layout_width="275dp"
             android:layout_height="275dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
             android:layout_marginTop="20dp"
