birkac ui duzenlemesi yapildi.

--- a/app/src/main/res/drawable/layer_list_background.xml
+++ b/app/src/main/res/drawable/layer_list_background.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
         android:drawable="@color/white">
     </item>
-
     <item
-        android:drawable="@drawable/rick_morty_rick_and_morty_stunned_qasem_roqaya"
+        android:drawable="@drawable/splashlogo"
         android:gravity="center">
     </item>
-
 </layer-list>
 
 
