--- a/app/src/main/res/layout-land/activity_character_details.xml
+++ b/app/src/main/res/layout-land/activity_character_details.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/backButton"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/bb"
+                android:src="@drawable/backbutton"
                 android:layout_margin="5dp">
             </ImageView>
             <TextView
