--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/logo" />
+        android:src="@drawable/splashlogo" />
 
     <TextView
         android:id="@+id/welcome_message"
@@ -23,7 +23,8 @@
         android:text="Welcome!"
         android:textSize="60sp"
         android:layout_margin="10dp"
-        android:textColor="@color/black"
+        android:fontFamily="@font/avenir_font"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
