--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
 
-        app:cardBackgroundColor="@color/white"
+        app:cardBackgroundColor="@color/green"
         app:cardCornerRadius="20dp"
         app:cardElevation="5dp"
         app:cardMaxElevation="5dp"
@@ -36,20 +36,22 @@
                 android:id="@+id/characterName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Character Name"
-                android:textSize="20sp"
-                android:textAlignment="center"
-                android:layout_margin="5dp"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@+id/characterImage"/>
+                android:layout_margin="5dp"
+                android:layout_toEndOf="@+id/characterImage"
+                android:fontFamily="@font/avenir_font"
+                android:text="Character Name"
+                android:textAlignment="center"
+                android:textSize="22sp" />
 
             <ImageView
                 android:id="@+id/characterGenderImage"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_margin="5dp"
-                android:layout_alignParentEnd="true"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_margin="10dp"
+
                 tools:srcCompat="@tools:sample/avatars" />
 
         </RelativeLayout>
