--- a/app/src/main/res/layout/item_location.xml
+++ b/app/src/main/res/layout/item_location.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<Button
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+
+
+
+
+    android:id="@+id/locationButton"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="55dp"
+    android:text="earth"
+    android:textSize="18sp"
+    android:fontFamily="@font/avenir_font"
+    android:backgroundTint="#000000"
+    android:layout_margin="5dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    android:enabled="true">
 
-    <Button
-        android:id="@+id/locationButton"
-        android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:text="earth"
-        android:backgroundTint="#000000"
-        android:layout_margin="5dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:enabled="true">
-    </Button>
 
-</androidx.cardview.widget.CardView>
+
+
+
+</Button>
