--- a/app/src/main/res/layout/activity_character_details.xml
+++ b/app/src/main/res/layout/activity_character_details.xml
@@ -28,7 +28,9 @@
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:layout_margin="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginStart="20dp"
                 android:textAlignment="textStart"
                 android:text="Alive"
                 android:textSize="25sp"
