--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#3A9A66</color>
+    <color name="yellow">#BEAD12</color>
+    <color name="gray">#7B807D</color>
 </resources>
