--- a/app/src/main/res/layout/activity_character_details.xml
+++ b/app/src/main/res/layout/activity_character_details.xml
@@ -57,8 +57,7 @@
             android:orientation="horizontal"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="20dp">
+            android:layout_marginBottom="5dp">
 
             <TextView
                 android:layout_width="130dp"
@@ -234,10 +233,6 @@
             </TextView>
         </LinearLayout>
 
-
-
     </LinearLayout>
-
-
 
 </ScrollView>
